--- a/runner/README
+++ b/runner/README
@@ -3,7 +3,7 @@
 ## Setup
 Make sure to download and unzip the Spider dataset from the [Spider website](https://drive.google.com/file/d/1403EGqzIDoHMdQF4c9Bkyl7dZLZ5Wt6J/view) to th `local_data` directory. This is used for the topic generation example. Make sure to download the KaggleDBQA dataset from the [KaggleDBQA repository](https://github.com/Chia-Hsuan-Lee/KaggleDBQA) and place it in the `local_data` directory.
 
-Ensure that you have installed the necessary packages for SynQL, and activate the environment. You can do this using poetry:
+This project uses [Poetry](https://python-poetry.org/) for dependency management. This project was written using [Python 3.12.3](https://www.python.org/downloads/release/python-3120/). Ensure that you have installed the necessary packages for SynQL, and activate the environment. You can do this using poetry:
 
 ```bash
 cd synql
